# amazon-pinpoint-interactive-sms-multilingual

./: .gitignore  CHANGELOG.md  QUICKSIGHT.md  README.md  sample_table_data.json  template.yaml
mark_conversation_initiated/: app.py  pyproject.toml  requirements.txt
mark_conversation_initiated/locales/en/LC_MESSAGES/: base.mo  base.po
mark_conversation_initiated/locales/es/LC_MESSAGES/: base.mo  base.po
mark_conversation_initiated/locales/vi/LC_MESSAGES/: base.mo  base.po
process_ddb_stream/: app.py  requirements.txt
receive_sms_messages/: app.py  requirements.txt
receive_sms_messages/locales/en/LC_MESSAGES/: base.mo  base.po
receive_sms_messages/locales/es/LC_MESSAGES/: base.mo  base.po
receive_sms_messages/locales/vi/LC_MESSAGES/: base.mo  base.po
tests/unit/: test_mark_conversation_initiated.py  test_process_ddb_stream.py  test_receive_sms_messages.py
